// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Buttons of different size correctly 1`] = `
<div>
  <button
    class="is-radius za-button za-button--primary za-button--xl"
    type="button"
  >
    xl尺寸
  </button>
  <button
    class="is-radius za-button za-button--primary za-button--lg"
    type="button"
  >
    lg尺寸
  </button>
  <button
    class="is-radius za-button za-button--primary"
    type="button"
  >
    默认尺寸
  </button>
  <button
    class="is-radius za-button za-button--primary za-button--sm"
    type="button"
  >
    sm尺寸
  </button>
  <button
    class="is-radius za-button za-button--primary za-button--xs"
    type="button"
  >
    xs尺寸
  </button>
</div>
`;

exports[`Button renders Buttons of different theme correctly 1`] = `
<div>
  <button
    class="is-radius za-button za-button--default"
    type="button"
  >
    default
  </button>
  <button
    class="is-radius za-button za-button--primary"
    type="button"
  >
    info
  </button>
  <button
    class="is-radius za-button za-button--success"
    type="button"
  >
    success
  </button>
  <button
    class="is-radius za-button za-button--warning"
    type="button"
  >
    warning
  </button>
  <button
    class="is-radius za-button za-button--error"
    type="button"
  >
    error
  </button>
</div>
`;

exports[`Button renders Buttons with radius or round props correctly 1`] = `
<div>
  <div>
    <button
      class="is-radius za-button za-button--default"
      type="button"
    >
      default
    </button>
    <button
      class="is-radius za-button za-button--primary"
      type="button"
    >
      info
    </button>
    <button
      class="is-radius za-button za-button--success"
      type="button"
    >
      success
    </button>
    <button
      class="is-radius za-button za-button--warning"
      type="button"
    >
      warning
    </button>
    <button
      class="is-radius za-button za-button--danger"
      type="button"
    >
      error
    </button>
  </div>
  <div>
    <button
      class="is-round za-button za-button--default"
      type="button"
    >
      default
    </button>
    <button
      class="is-round za-button za-button--primary"
      type="button"
    >
      info
    </button>
    <button
      class="is-round za-button za-button--success"
      type="button"
    >
      success
    </button>
    <button
      class="is-round za-button za-button--warning"
      type="button"
    >
      warning
    </button>
    <button
      class="is-round za-button za-button--danger"
      type="button"
    >
      error
    </button>
  </div>
</div>
`;

exports[`Button renders anchor Button correctly 1`] = `
<a
  class="is-radius za-button za-button--primary"
  href="https://www.baidu.com"
  target="_blank"
>
  百度一下
</a>
`;

exports[`Button renders disaled Button correctly 1`] = `
<div>
  <button
    class="is-radius is-disabled za-button za-button--default"
    disabled=""
    type="button"
  >
    default
  </button>
</div>
`;

exports[`Button renders loading Button correctly 1`] = `
<div>
  <button
    class="is-radius is-loading za-button za-button--info"
    type="button"
  >
    <i
      class="za-icon za-icon-loading theme-default rotate360"
    />
      加载中
  </button>
</div>
`;
